# typos-config-builder

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  typos.local.toml  typos.toml
.github/actions/build-wheels/: action.yml
.github/actions/pure-python-wheel/: action.yml
.github/workflows/: act-validation.yml  build-wheels.yml  ci.yml  coverage-main.yml  release.yml
.rules/: python-00.md
docs/: complexity-antipatterns-and-refactoring-strategies.md  contents.md  developers-guide.md  local-validation-of-github-actions-with-act-and-pytest.md  repository-layout.md  scripting-standards.md  typos-config-builder-design.md  users-guide.md
docs/adrs/: 0001-keep-the-builder-focused.md
scripts/: generate_typos_config.py  typos_rollout.py
tests/: conftest.py  test_build.py  test_cli.py  test_http.py  test_stub.py
typos_config_builder/: __init__.py  builder.py  cache.py  cli.py  http.py  patterns.py  policy.py  pure.py  render.py
typos_config_builder/data/: typos-oxendict-base.toml
